--- a/ContentsProject/ContentsProject.vcxproj
+++ b/ContentsProject/ContentsProject.vcxproj
@@ -179,6 +179,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="TestMap.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TileMapGameMode.h">
       <SubType>
       </SubType>
@@ -225,6 +229,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Monster.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="TestMap.cpp">
       <SubType>
       </SubType>
     </ClCompile>
