--- a/ContentsProject/ContentsProject.vcxproj.filters
+++ b/ContentsProject/ContentsProject.vcxproj.filters
@@ -44,6 +44,12 @@
       <Filter>ContentsObject\Title</Filter>
     </ClCompile>
     <ClCompile Include="TestMap.cpp" />
+    <ClCompile Include="ANewPlayer.cpp">
+      <Filter>ContentsObject\Global</Filter>
+    </ClCompile>
+    <ClCompile Include="Score.cpp">
+      <Filter>ContentsObject\Global</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayGameMode.h">
@@ -89,6 +95,12 @@
       <Filter>ContentsObject\Title</Filter>
     </ClInclude>
     <ClInclude Include="TestMap.h" />
+    <ClInclude Include="ANewPlayer.h">
+      <Filter>ContentsObject\Global</Filter>
+    </ClInclude>
+    <ClInclude Include="Score.h">
+      <Filter>ContentsObject\Global</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Core">
