--- a/EngineBase/EngineBase.vcxproj.filters
+++ b/EngineBase/EngineBase.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClCompile Include="EngineRandom.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="FSMStateManager.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h">
@@ -74,6 +77,9 @@
     </ClInclude>
     <ClInclude Include="EngineRandom.h">
       <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="FSMStateManager.h">
+      <Filter>Object</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
