--- a/EngineCore/EngineCore.vcxproj
+++ b/EngineCore/EngineCore.vcxproj
@@ -175,6 +175,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Level.h" />
+    <ClInclude Include="PathFindAStar.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="PreCompile.h" />
     <ClInclude Include="SceneComponent.h">
       <SubType>
@@ -210,6 +214,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Level.cpp" />
+    <ClCompile Include="PathFindAStar.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="PreCompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
