--- a/EngineBase/EngineBase.vcxproj.filters
+++ b/EngineBase/EngineBase.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="FSMStateManager.cpp">
       <Filter>Object</Filter>
     </ClCompile>
+    <ClCompile Include="TimeEvent.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h">
@@ -79,6 +82,9 @@
       <Filter>Math</Filter>
     </ClInclude>
     <ClInclude Include="FSMStateManager.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="TimeEvent.h">
       <Filter>Object</Filter>
     </ClInclude>
   </ItemGroup>
