--- a/ContentsProject/ContentsProject.vcxproj
+++ b/ContentsProject/ContentsProject.vcxproj
@@ -191,6 +191,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Tile_Destroy.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="TitleLogo.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayGameMode.h">
@@ -241,6 +245,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="TileMapGameMode.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Tile_Destroy.cpp">
       <SubType>
       </SubType>
     </ClCompile>
