--- a/EngineBase/EngineBase.vcxproj
+++ b/EngineBase/EngineBase.vcxproj
@@ -167,6 +167,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineResources.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="EngineSerializer.h">
       <SubType>
       </SubType>
@@ -204,6 +208,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="EngineRandom.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="EngineResources.cpp">
       <SubType>
       </SubType>
     </ClCompile>
