--- a/EngineBase/EngineBase.vcxproj.filters
+++ b/EngineBase/EngineBase.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="TimeEvent.cpp">
       <Filter>Object</Filter>
     </ClCompile>
+    <ClCompile Include="EngineResources.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h">
@@ -85,6 +88,9 @@
       <Filter>Object</Filter>
     </ClInclude>
     <ClInclude Include="TimeEvent.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="EngineResources.h">
       <Filter>Object</Filter>
     </ClInclude>
   </ItemGroup>
