--- a/ContentsProject/ContentsProject.vcxproj.filters
+++ b/ContentsProject/ContentsProject.vcxproj.filters
@@ -61,7 +61,7 @@
     <ClCompile Include="BossMapGameMode.cpp">
       <Filter>ContentsObject\GameMode\TILEMAPEDIT</Filter>
     </ClCompile>
-    <ClCompile Include="UI_Timer.cpp">
+    <ClCompile Include="UIBar.cpp">
       <Filter>ContentsObject\Actors_Global</Filter>
     </ClCompile>
   </ItemGroup>
@@ -129,7 +129,7 @@
     <ClInclude Include="BossMapGameMode.h">
       <Filter>ContentsObject\GameMode\TILEMAPEDIT</Filter>
     </ClInclude>
-    <ClInclude Include="UI_Timer.h">
+    <ClInclude Include="UIBar.h">
       <Filter>ContentsObject\Actors_Global</Filter>
     </ClInclude>
   </ItemGroup>
