--- a/ContentsProject/ContentsProject.vcxproj.filters
+++ b/ContentsProject/ContentsProject.vcxproj.filters
@@ -64,6 +64,9 @@
     <ClCompile Include="UIBar.cpp">
       <Filter>ContentsObject\Actors_Global</Filter>
     </ClCompile>
+    <ClCompile Include="CoinInsert.cpp">
+      <Filter>ContentsObject\Actors_Title</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PreCompile.h">
@@ -131,6 +134,9 @@
     </ClInclude>
     <ClInclude Include="UIBar.h">
       <Filter>ContentsObject\Actors_Global</Filter>
+    </ClInclude>
+    <ClInclude Include="CoinInsert.h">
+      <Filter>ContentsObject\Actors_Title</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
