--- a/ContentsProject/ContentsProject.vcxproj.filters
+++ b/ContentsProject/ContentsProject.vcxproj.filters
@@ -2,206 +2,209 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="PreCompile.cpp">
-      <Filter>PreCompile</Filter>
+      <Filter>04_PreCompile</Filter>
     </ClCompile>
     <ClCompile Include="BombmanCore.cpp">
-      <Filter>Core</Filter>
+      <Filter>00_Core</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClCompile>
     <ClCompile Include="TitleLogo.cpp">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClCompile>
     <ClCompile Include="ATileMap.cpp">
-      <Filter>TileMap</Filter>
+      <Filter>03_TileMap</Filter>
     </ClCompile>
     <ClCompile Include="ChooseStage.cpp">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClCompile>
     <ClCompile Include="Score.cpp">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClCompile>
     <ClCompile Include="TestMap.cpp">
-      <Filter>TileMap</Filter>
+      <Filter>03_TileMap</Filter>
     </ClCompile>
     <ClCompile Include="Monster.cpp">
-      <Filter>ContentsObject\Actors_Play\Monster\Parent</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Monster\Parent</Filter>
     </ClCompile>
     <ClCompile Include="Bomb.cpp">
-      <Filter>ContentsObject\Actors_Play\Objects</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Objects</Filter>
     </ClCompile>
     <ClCompile Include="Tile_Destroy.cpp">
-      <Filter>ContentsObject\Actors_Play\Objects</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Objects</Filter>
     </ClCompile>
     <ClCompile Include="PlayMap.cpp">
-      <Filter>ContentsObject\Actors_Play\BG</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\BG</Filter>
     </ClCompile>
     <ClCompile Include="Mushroom.cpp">
-      <Filter>ContentsObject\Actors_Play\Monster</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Monster</Filter>
     </ClCompile>
     <ClCompile Include="Portal.cpp">
-      <Filter>ContentsObject\Actors_Play\Objects</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Objects</Filter>
     </ClCompile>
     <ClCompile Include="TitleGameMode.cpp">
-      <Filter>ContentsObject\GameMode\TITLE</Filter>
+      <Filter>02_ContentsObject\04_GameMode\01_TITLE</Filter>
     </ClCompile>
     <ClCompile Include="BossGameMode.cpp">
-      <Filter>ContentsObject\GameMode\PLAY</Filter>
+      <Filter>02_ContentsObject\04_GameMode\02_PLAY</Filter>
     </ClCompile>
     <ClCompile Include="PlayGameMode.cpp">
-      <Filter>ContentsObject\GameMode\PLAY</Filter>
+      <Filter>02_ContentsObject\04_GameMode\02_PLAY</Filter>
     </ClCompile>
     <ClCompile Include="EndGameMode.cpp">
-      <Filter>ContentsObject\GameMode\END</Filter>
+      <Filter>02_ContentsObject\04_GameMode\03_END</Filter>
     </ClCompile>
     <ClCompile Include="TileMapGameMode.cpp">
-      <Filter>ContentsObject\GameMode\TILEMAPEDIT</Filter>
+      <Filter>02_ContentsObject\04_GameMode\00_TILEMAPEDIT</Filter>
     </ClCompile>
     <ClCompile Include="BossMapGameMode.cpp">
-      <Filter>ContentsObject\GameMode\TILEMAPEDIT</Filter>
+      <Filter>02_ContentsObject\04_GameMode\00_TILEMAPEDIT</Filter>
     </ClCompile>
     <ClCompile Include="UIBar.cpp">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClCompile>
     <ClCompile Include="CoinInsert.cpp">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClCompile>
     <ClCompile Include="Fade.cpp">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClCompile>
     <ClCompile Include="Transit_Ani.cpp">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PreCompile.h">
-      <Filter>PreCompile</Filter>
+      <Filter>04_PreCompile</Filter>
     </ClInclude>
     <ClInclude Include="BombmanCore.h">
-      <Filter>Core</Filter>
+      <Filter>00_Core</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClInclude>
     <ClInclude Include="ContentsEnum.h">
-      <Filter>Enums</Filter>
+      <Filter>01_Enums</Filter>
     </ClInclude>
     <ClInclude Include="TitleLogo.h">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClInclude>
     <ClInclude Include="ATileMap.h">
-      <Filter>TileMap</Filter>
+      <Filter>03_TileMap</Filter>
     </ClInclude>
     <ClInclude Include="ChooseStage.h">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClInclude>
     <ClInclude Include="Score.h">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClInclude>
     <ClInclude Include="TestMap.h">
-      <Filter>TileMap</Filter>
+      <Filter>03_TileMap</Filter>
     </ClInclude>
     <ClInclude Include="Bomb.h">
-      <Filter>ContentsObject\Actors_Play\Objects</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Tile_Destroy.h">
-      <Filter>ContentsObject\Actors_Play\Objects</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Objects</Filter>
     </ClInclude>
     <ClInclude Include="PlayMap.h">
-      <Filter>ContentsObject\Actors_Play\BG</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\BG</Filter>
     </ClInclude>
     <ClInclude Include="Mushroom.h">
-      <Filter>ContentsObject\Actors_Play\Monster</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Monster</Filter>
     </ClInclude>
     <ClInclude Include="Portal.h">
-      <Filter>ContentsObject\Actors_Play\Objects</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Objects</Filter>
     </ClInclude>
     <ClInclude Include="Monster.h">
-      <Filter>ContentsObject\Actors_Play\Monster\Parent</Filter>
+      <Filter>02_ContentsObject\02_Actors_Play\Monster\Parent</Filter>
     </ClInclude>
     <ClInclude Include="TitleGameMode.h">
-      <Filter>ContentsObject\GameMode\TITLE</Filter>
+      <Filter>02_ContentsObject\04_GameMode\01_TITLE</Filter>
     </ClInclude>
     <ClInclude Include="BossGameMode.h">
-      <Filter>ContentsObject\GameMode\PLAY</Filter>
+      <Filter>02_ContentsObject\04_GameMode\02_PLAY</Filter>
     </ClInclude>
     <ClInclude Include="PlayGameMode.h">
-      <Filter>ContentsObject\GameMode\PLAY</Filter>
+      <Filter>02_ContentsObject\04_GameMode\02_PLAY</Filter>
     </ClInclude>
     <ClInclude Include="EndGameMode.h">
-      <Filter>ContentsObject\GameMode\END</Filter>
+      <Filter>02_ContentsObject\04_GameMode\03_END</Filter>
     </ClInclude>
     <ClInclude Include="TileMapGameMode.h">
-      <Filter>ContentsObject\GameMode\TILEMAPEDIT</Filter>
+      <Filter>02_ContentsObject\04_GameMode\00_TILEMAPEDIT</Filter>
     </ClInclude>
     <ClInclude Include="BossMapGameMode.h">
-      <Filter>ContentsObject\GameMode\TILEMAPEDIT</Filter>
+      <Filter>02_ContentsObject\04_GameMode\00_TILEMAPEDIT</Filter>
     </ClInclude>
     <ClInclude Include="UIBar.h">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClInclude>
     <ClInclude Include="CoinInsert.h">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClInclude>
     <ClInclude Include="Fade.h">
-      <Filter>ContentsObject\Actors_Global</Filter>
+      <Filter>02_ContentsObject\00_Actors_Global</Filter>
     </ClInclude>
     <ClInclude Include="Transit_Ani.h">
-      <Filter>ContentsObject\Actors_Title</Filter>
+      <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="Core">
+    <Filter Include="00_Core">
       <UniqueIdentifier>{e64ff30b-aac1-450f-bd19-7bfbb1721129}</UniqueIdentifier>
     </Filter>
-    <Filter Include="PreCompile">
-      <UniqueIdentifier>{b4259974-663e-4ddd-92c7-edbc04596b92}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ContentsObject">
-      <UniqueIdentifier>{7d69905a-f12b-4389-84f3-94c304a7afc9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ContentsObject\GameMode">
-      <UniqueIdentifier>{44a6d2fd-0227-4b77-a9f6-11dc56acf790}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="TileMap">
-      <UniqueIdentifier>{97059f21-d2fb-46a6-82eb-822464da6c1b}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ContentsObject\GameMode\TITLE">
-      <UniqueIdentifier>{95b016de-f886-4059-a373-fd5d953b9e20}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ContentsObject\GameMode\PLAY">
-      <UniqueIdentifier>{9bbfe8f9-3485-4514-82cf-641831d507b2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ContentsObject\GameMode\END">
-      <UniqueIdentifier>{f3724881-774e-4d88-9cd8-9179e9f01502}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="ContentsObject\GameMode\TILEMAPEDIT">
-      <UniqueIdentifier>{8ff7f439-d6d5-4ec9-b320-c9b2cfd3dbc8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Enums">
+    <Filter Include="01_Enums">
       <UniqueIdentifier>{e9fe401b-b121-409f-8edf-3cca141edcef}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ContentsObject\Actors_Global">
+    <Filter Include="02_ContentsObject">
+      <UniqueIdentifier>{7d69905a-f12b-4389-84f3-94c304a7afc9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_ContentsObject\04_GameMode">
+      <UniqueIdentifier>{44a6d2fd-0227-4b77-a9f6-11dc56acf790}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_ContentsObject\04_GameMode\01_TITLE">
+      <UniqueIdentifier>{95b016de-f886-4059-a373-fd5d953b9e20}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_ContentsObject\04_GameMode\02_PLAY">
+      <UniqueIdentifier>{9bbfe8f9-3485-4514-82cf-641831d507b2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_ContentsObject\04_GameMode\03_END">
+      <UniqueIdentifier>{f3724881-774e-4d88-9cd8-9179e9f01502}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_ContentsObject\04_GameMode\00_TILEMAPEDIT">
+      <UniqueIdentifier>{8ff7f439-d6d5-4ec9-b320-c9b2cfd3dbc8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_ContentsObject\00_Actors_Global">
       <UniqueIdentifier>{4bfaef8e-daa6-4977-b974-e5b909f290db}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ContentsObject\Actors_Play">
+    <Filter Include="02_ContentsObject\02_Actors_Play">
       <UniqueIdentifier>{c4fac68f-60cc-4b9b-b7a2-3d2db87be598}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ContentsObject\Actors_Play\Objects">
+    <Filter Include="02_ContentsObject\02_Actors_Play\Objects">
       <UniqueIdentifier>{acfefd0f-d0da-49d6-acde-34f8c31d8b66}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ContentsObject\Actors_Play\BG">
+    <Filter Include="02_ContentsObject\02_Actors_Play\BG">
       <UniqueIdentifier>{6bcb5aa5-d1cc-4c4b-a56b-2169f147caea}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ContentsObject\Actors_Play\Monster">
+    <Filter Include="02_ContentsObject\02_Actors_Play\Monster">
       <UniqueIdentifier>{5d9a3347-840e-43cc-bc75-e992b71fd46c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ContentsObject\Actors_Play\Monster\Parent">
+    <Filter Include="02_ContentsObject\02_Actors_Play\Monster\Parent">
       <UniqueIdentifier>{aac8f3b9-2d31-4355-ab51-f95a61d51e6b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ContentsObject\Actors_Title">
+    <Filter Include="02_ContentsObject\01_Actors_Title">
       <UniqueIdentifier>{77b34b9b-e690-42cc-b141-c3742844be4b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02_ContentsObject\03_Actors_End">
+      <UniqueIdentifier>{9ec6f6dd-b8da-42f5-a0d4-b761b6ea4e7a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="03_TileMap">
+      <UniqueIdentifier>{97059f21-d2fb-46a6-82eb-822464da6c1b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="04_PreCompile">
+      <UniqueIdentifier>{b4259974-663e-4ddd-92c7-edbc04596b92}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
