--- a/ContentsProject/ContentsProject.vcxproj
+++ b/ContentsProject/ContentsProject.vcxproj
@@ -191,6 +191,10 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="Result.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="Transit_Ani.h">
       <SubType>
       </SubType>
@@ -277,6 +281,10 @@
       </SubType>
     </ClCompile>
     <ClCompile Include="Fade.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
+    <ClCompile Include="Result.cpp">
       <SubType>
       </SubType>
     </ClCompile>
