--- a/ContentsProject/ContentsProject.vcxproj.filters
+++ b/ContentsProject/ContentsProject.vcxproj.filters
@@ -73,6 +73,9 @@
     <ClCompile Include="Transit_Ani.cpp">
       <Filter>02_ContentsObject\01_Actors_Title</Filter>
     </ClCompile>
+    <ClCompile Include="Result.cpp">
+      <Filter>02_ContentsObject\03_Actors_End</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PreCompile.h">
@@ -149,6 +152,9 @@
     </ClInclude>
     <ClInclude Include="Transit_Ani.h">
       <Filter>02_ContentsObject\01_Actors_Title</Filter>
+    </ClInclude>
+    <ClInclude Include="Result.h">
+      <Filter>02_ContentsObject\03_Actors_End</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
